--- a/module-1/pandas-project/your-code/1. Data Analysis.ipynb
+++ b/module-1/pandas-project/your-code/1. Data Analysis.ipynb
@@ -2026,10 +2026,10 @@
     "season_time[\"Attacks\"] = sharks6.groupby([\"Hemisphere\",\"Month\",\"Time of day\"]).count()[\"Year\"]\n",
     "season_time[\"Deaths\"] = sharks6[sharks6[\"Fatal\"]==\"Y\"].groupby([\"Hemisphere\",\"Month\",\"Time of day\"]).count()[\"Year\"]\n",
     "season_time[\"Death rate %\"] = (season_time[\"Deaths\"]/season_time[\"Attacks\"])*100\n",
-    "#season_time[\"Common victim\"] = sharks6.groupby([\"Hemisphere\",\"Month\",\"Time of day\"]).mode()\n",
+    "#season_time[\"Common victim\"] = sharks6.groupby([\"Hemisphere\",\"Month\",\"Time of day\"])[\"Sex\"].agg('mode')\n",
     "season_time[\"Avg Age\"] = sharks6.groupby([\"Hemisphere\",\"Month\",\"Time of day\"]).mean()[\"Age\"]\n",
     "season_time.fillna(0,inplace=True)\n",
-    "season_time = season_time.reset_index().rename_axis(None).rename_axis(None, axis=1)\n",
+    "season_time = season_time.reset_index()\n",
     "season_time"
    ]
   },
