--- a/module-1/lab-df-calculation-and-transformation/your-code/main.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/main.ipynb
@@ -41,7 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "#"
    ]
   }
  ],
@@ -61,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
