--- a/module-1/pandas-project/your-code/data-wrangling.ipynb
+++ b/module-1/pandas-project/your-code/data-wrangling.ipynb
@@ -50,7 +50,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DATA CLEANING"
+    "DATA CLEANING\n",
+    "Hypothesis: Male surfers in Florida have had the highest incidence of shark attacks with increasing frequencity since the 1900 to today"
    ]
   },
   {
