--- a/module-1/pandas-project/your-code/[SHARK ATTACKS].ipynb
+++ b/module-1/pandas-project/your-code/[SHARK ATTACKS].ipynb
@@ -5511,9 +5511,9 @@
        "3      98\n",
        "11     97\n",
        "2      89\n",
-       "22      1\n",
        "93      1\n",
        "15      1\n",
+       "22      1\n",
        "Name: Date, dtype: int64"
       ]
      },
@@ -6134,53 +6134,53 @@
        "NEW CALEDONIA                      10\n",
        "EGYPT                               9\n",
        "FRENCH POLYNESIA                    8\n",
-       "FIJI                                7\n",
        "MOZAMBIQUE                          7\n",
+       "FIJI                                7\n",
        "ITALY                               6\n",
-       "CROATIA                             3\n",
+       "TAIWAN                              3\n",
+       "INDONESIA                           3\n",
+       "VIETNAM                             3\n",
        "TONGA                               3\n",
        "JAPAN                               3\n",
-       "VIETNAM                             3\n",
-       "INDONESIA                           3\n",
-       "TAIWAN                              3\n",
+       "CROATIA                             3\n",
        "SPAIN                               3\n",
        "CUBA                                3\n",
-       "ECUADOR                             2\n",
-       "VANUATU                             2\n",
-       "NEW BRITAIN                         2\n",
-       "AMERICAN SAMOA                      2\n",
+       "HONG KONG                           2\n",
        "MARSHALL ISLANDS                    2\n",
        "PALAU                               2\n",
-       "HONG KONG                           2\n",
+       "NEW BRITAIN                         2\n",
        "VENEZUELA                           2\n",
-       "COSTA RICA                          1\n",
-       "SCOTLAND                            1\n",
-       "GREECE                              1\n",
-       "MICRONESIA                          1\n",
-       "BRITISH WEST INDIES                 1\n",
-       "SOUTH KOREA                         1\n",
-       "EL SALVADOR                         1\n",
-       "FEDERATED STATES OF MICRONESIA      1\n",
-       "ARGENTINA                           1\n",
-       "ST. MAARTIN                         1\n",
-       "SOLOMON ISLANDS                     1\n",
-       "JAMAICA                             1\n",
-       "BERMUDA                             1\n",
+       "ECUADOR                             2\n",
+       "VANUATU                             2\n",
+       "AMERICAN SAMOA                      2\n",
        "GRAND CAYMAN                        1\n",
-       "PACIFIC OCEAN                       1\n",
-       "OKINAWA                             1\n",
-       "ENGLAND                             1\n",
-       "ISRAEL                              1\n",
-       "RUSSIA                              1\n",
        "MALDIVES                            1\n",
-       "NORTH PACIFIC OCEAN                 1\n",
-       "GUAM                                1\n",
-       "TURKS & CAICOS                      1\n",
-       "SENEGAL                             1\n",
-       "SEYCHELLES                          1\n",
-       "UNITED KINGDOM                      1\n",
-       "THAILAND                            1\n",
        "COLUMBIA                            1\n",
+       "SOLOMON ISLANDS                     1\n",
+       "PACIFIC OCEAN                       1\n",
+       "THAILAND                            1\n",
+       "SOUTH KOREA                         1\n",
+       "ENGLAND                             1\n",
+       "MICRONESIA                          1\n",
+       "GUAM                                1\n",
+       "FEDERATED STATES OF MICRONESIA      1\n",
+       "UNITED KINGDOM                      1\n",
+       "COSTA RICA                          1\n",
+       "SEYCHELLES                          1\n",
+       "SCOTLAND                            1\n",
+       "ISRAEL                              1\n",
+       "NORTH PACIFIC OCEAN                 1\n",
+       "EL SALVADOR                         1\n",
+       "OKINAWA                             1\n",
+       "ST. MAARTIN                         1\n",
+       "BRITISH WEST INDIES                 1\n",
+       "JAMAICA                             1\n",
+       "TURKS & CAICOS                      1\n",
+       "RUSSIA                              1\n",
+       "SENEGAL                             1\n",
+       "ARGENTINA                           1\n",
+       "BERMUDA                             1\n",
+       "GREECE                              1\n",
        "Name: COUNTRY, dtype: int64"
       ]
      },
@@ -7202,6 +7202,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                           Paddling\n",
+       "6                                           Swimming\n",
+       "8                                            Walking\n",
+       "10                                    Feeding sharks\n",
+       "18                                      Scuba diving\n",
+       "21                                           Surfing\n",
+       "23                                           Fishing\n",
+       "24                                     Paddle-skiing\n",
+       "34                                           Surfing\n",
+       "35                           Stand-Up Paddleboarding\n",
+       "36                                            Wading\n",
+       "37                                          Swimming\n",
+       "38                                           Surfing\n",
+       "40                                          Swimming\n",
+       "42                                           Walking\n",
+       "51                                           Surfing\n",
+       "53                                           Surfing\n",
+       "60                                      Spearfishing\n",
+       "63                                           Surfing\n",
+       "64                                     Night bathing\n",
+       "66                                           Surfing\n",
+       "71                                Kayaking / Fishing\n",
+       "74                                           Surfing\n",
+       "75                                        Snorkeling\n",
+       "87                                           Surfing\n",
+       "89                                           Surfing\n",
+       "96                                           Surfing\n",
+       "100                                              SUP\n",
+       "102                                         Swimming\n",
+       "104                                          Fishing\n",
+       "                            ...                     \n",
+       "4202                                        Standing\n",
+       "4203    Swimming between  anchored  pearling luggers\n",
+       "4222                                    Spearfishing\n",
+       "4228                        Skindiving, fish at belt\n",
+       "4238                              Swimming near pier\n",
+       "4258            Swimming, attacked at  surf carnival\n",
+       "4260                               Diving into water\n",
+       "4275                                        Swimming\n",
+       "4286                                        Swimming\n",
+       "4303                                    Spearfishing\n",
+       "4304                                        Swimming\n",
+       "4308              Hunting lobsters in 2.4 m of water\n",
+       "4340                Pearl diving from lugger Whyalla\n",
+       "4349                                        Floating\n",
+       "4350                          Crouching in the water\n",
+       "4370                                    Spearfishing\n",
+       "4387                                    Spearfishing\n",
+       "4395                           Fishing, setting nets\n",
+       "4399                   Body surfing & treading water\n",
+       "4426                                  Treading water\n",
+       "4427                                        Swimming\n",
+       "4429                                  Treading water\n",
+       "4446                               Fell off surf ski\n",
+       "4449                                    Body surfing\n",
+       "4459                                    Body surfing\n",
+       "4461                   Body surfing / treading water\n",
+       "4462                                         Fishing\n",
+       "4463    Jerked overboard while pole fishing for tuna\n",
+       "4482                                    Body surfing\n",
+       "4489                                    Bending over\n",
+       "Name: Activity, Length: 1328, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(df['Activity'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -7228,18 +7308,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "def getVerbs (words): \n",
+    "    lista = [] \n",
+    "    if 'ing' in words:\n",
+    "        lista.append('\\w*ing', regex=True) \n",
+    "    else:\n",
+    "        lista.append('OTHERS')  \n",
+    "    return lista\n",
+    "df['Activity'] = df['Activity'].apply(getVerbs)\n",
+    "display(df['Activity'])\n",
+    "\n",
+    "\n",
+    "df['Activity'] = df['Activity'].apply(getVerbs_regex)\n",
+    "df = df.rename(columns={\"Activity\":'ACTIVITY'})\n",
+    "df['ACTIVITY'].value_counts()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def getVerbs_regex (sentence):\n",
+    "    #sentence = str(sentence)\n",
+    "    print(sentence)\n",
+    "    found = re.findall('\\w*ing', sentence)[0]\n",
+    "    #findall devuleve una lista, no una string\n",
+    "    #con [0] me devuelve el primer elemento\n",
+    "    if found != '':\n",
+    "        sentence = sentence.replace(sentence,found)\n",
+    "        return sentence\n",
+    "    else: \n",
+    "        return 'OTHERS'"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-d13b0f63714c>, line 10)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paddling\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'callable_iterator' object is not subscriptable",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-d13b0f63714c>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    sentence = str.replace(found,sentence):\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-69-711388da6158>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m'Undefined'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Activity'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Activity'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgetVerbs_regex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Activity'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m#a = [getVerbs_regex(a) for a in df['Activity']]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, func, convert_dtype, args, **kwds)\u001b[0m\n\u001b[1;32m   3589\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3590\u001b[0m                 \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3591\u001b[0;31m                 \u001b[0mmapped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap_infer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconvert_dtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3592\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3593\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSeries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-69-711388da6158>\u001b[0m in \u001b[0;36mgetVerbs_regex\u001b[0;34m(sentence)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0msentence\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msentence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msentence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mfound\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfinditer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\w*ing'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msentence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfound\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0msentence\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msentence\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msentence\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfound\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'callable_iterator' object is not subscriptable"
      ]
     }
    ],
@@ -7247,19 +7382,23 @@
     "# actions\n",
     "import re\n",
     "\n",
-    "# ir viendo con print\n",
-    "\n",
-    "def getVerbs_regex (*sentence):\n",
-    "    for i in sentence:\n",
-    "        found = re.findall('\\w*ing', sentence)\n",
-    "        if found != '':\n",
-    "            sentence = str.replace(found,sentence):\n",
-    "            return sentence\n",
-    "        else: return 'OTHERS'\n",
+    "def getVerbs_regex (sentence):\n",
+    "    sentence = str(sentence)\n",
+    "    print(sentence)\n",
+    "    found = re.finditer('\\w*ing', sentence)[0]\n",
+    "    if found != '':\n",
+    "        sentence = sentence.replace(sentence,found)\n",
+    "        return sentence\n",
+    "    else: \n",
+    "        return 'Undefined'\n",
     "\n",
     "df['Activity'] = df['Activity'].apply(getVerbs_regex)\n",
-    "df = df.rename(columns={\"Activity\":'ACTIVITY'})\n",
-    "df['ACTIVITY'].value_counts()\n"
+    "display(df['Activity'])\n",
+    "#a = [getVerbs_regex(a) for a in df['Activity']]\n",
+    "#print(a)\n",
+    "#list index out of range: la longitud de uno no es igual que la longitud del otro\n",
+    "\n",
+    "\n"
    ]
   },
   {
