--- a/module-1/lab-df-calculation-and-transformation/your-code/main.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/main.ipynb
@@ -41,7 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "import pandas as pd\n",
+    "#pd = pd.read_csv('../retail_sales.csv', encoding = \"ISO-8859-1\")"
    ]
   }
  ],
